# stm32wb-hal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  memory.x  memory_xC.x  memory_xE.x  memory_xG.x
.cargo/: config
examples/: blinky_systick.rs  flash.rs  hello.rs  i2c_scanner.rs  pwm.rs  usb_ble.rs  usb_serial.rs
src/: datetime.rs  dma.rs  dmamux.rs  flash.rs  gpio.rs  i2c.rs  ipcc.rs  lib.rs  lptim.rs  prelude.rs  pwm.rs  pwr.rs  rtc.rs  smps.rs  spi.rs  time.rs  tl_mbox.rs  usb.rs
src/rcc/: config.rs  mod.rs  mux.rs
src/tl_mbox/: ble.rs  channels.rs  cmd.rs  consts.rs  evt.rs  lhci.rs  mm.rs  shci.rs  sys.rs  unsafe_linked_list.rs
src/traits/: flash.rs
