[package]
name = "stm32wb-hal"
version = "0.1.0"
authors = ["eupn <eupn@protonmail.com>"]
description = "Hardware abstraction layer for the STM32WB55 chips"
keywords = ["no-std", "stm32wb", "stm32wb55", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/eupn/stm32wb-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.1"
stm32wb-pac = "0.1"
as-slice = "0.1"

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[package.metadata.docs.rs]
features = ["rt"]

[features]
rt = ["stm32wb-pac/rt"]
unproven = ["embedded-hal/unproven"]

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.1"
cortex-m-rt = "0.6.6"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
