[package]
name = "stm32wb-hal"
version = "0.1.13"
authors = ["eupn <eupn@protonmail.com>"]
description = "Hardware abstraction layer for the STM32WB55 chips"
keywords = ["no-std", "stm32wb", "stm32wb55", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/eupn/stm32wb-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
embedded-dma = "0.1"
nb = "0.1.1"
stm32wb-pac = "0.2"
as-slice = "0.1"
cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
bit_field = "0.10.0"
heapless = "0.5.3"

[dependencies.stm32-device-signature]
version = "0.3.0"
features = ["stm32wb5x"]

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32-usbd]
version = "0.5.0"
features = ["ram_access_2x16"]
optional = true

[features]

xC-package = []
xE-package = []
xG-package = []

rt = ["stm32wb-pac/rt"]

default = [ "rt" ]

[dev-dependencies]
cortex-m-rtfm = "0.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
cortex-m-rt = "0.6.6"
usb-device = "0.2"
usbd-serial = "0.1.0"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
